--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "scripts": {
       "start": "json-server --watch db.json",
+      "seeds": "node seed-data/seed-db.js",
       "tests": "node tests/run-newman.js"
     },
     "author": "",
